manifests/blue-green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-green
  labels:
    app: flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
      version: green
  template:
    metadata:
      labels:
        app: flask-app
        version: green
    spec:
      containers:
      - name: flask-app
        image: prasanthsiddarth/flask-app:latest
        ports:
        - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-blue
  labels:
    app: flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
      version: blue
  template:
    metadata:
      labels:
        app: flask-app
        version: blue
    spec:
      containers:
      - name: flask-app
        image: prasanthsiddarth/flask-app:stable
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  selector:
    app: flask-app
    version: green  # Switch between green and blue for rollout
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
