manifests/green-service.yaml
# green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app
spec:
  selector:
    app: flask-app
    version: green
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5003
  type: NodePort
